fix wrong location methods